# composite-langs

./: .gitignore  README.md  composite-langs.cabal  notes
Language/Composite/: IDL.hs
Language/Composite/IDL/: CStub.hs  CVect.hs  Header.hs  IDL.hs~  Library.hs  SStub.hs  SStubASM.hs  StateMachines.hs  Transformation.hs  Transformation.hs~  test.pony.c
Language/Composite/IDL/CStub/: Calls.hs  Checks.hs
